--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -113,7 +113,7 @@
                         <ColumnDefinition Width="33*" />
                         <ColumnDefinition Width="33*" />
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Content="AÑADIR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Right"></Button>
+                    <Button Grid.Column="0" Click="btnGuardar_Click" Content="AÑADIR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Right"></Button>
                     <Button Grid.Column="1" Content="MODIFICAR" Style="{StaticResource ButtonFormBlack}" Width="90"></Button>
                     <Button Grid.Column="2" Content="ELIMINAR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Left"></Button>
                 </Grid>
