--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -1,10 +1,9 @@
 ﻿<Window x:Class="Vistas.winMesas"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="1280" MinHeight="720" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="1280" MinHeight="720" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
+        xmlns:converter="clr-namespace:Vistas"
         >
-        <!--xmlns:svc="clr-namespace:Vistas"-->
-        
         <!--xmlns:svc="clr-namespace:Vistas;assembly=winMesas"-->
         
         
@@ -22,25 +21,14 @@
         </Border>
         <Grid Margin="0,40,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="10*" />
-                <RowDefinition Height="80*" />
-                <RowDefinition Height="10*" />
+                <RowDefinition Height="64*" />
+                <RowDefinition Height="546*" />
+                <RowDefinition Height="31*" />
             </Grid.RowDefinitions>
             <Label 
             Name="txtTitle"
             Content="LISTADO DE MESAS"
             Style="{StaticResource FormTitle}"
-                />
-            <Button
-                Content="Volver"
-                FontSize="16"
-                Foreground="White"
-                Width="50"
-                Height="auto"
-                Margin="10"
-                HorizontalAlignment="Left"
-                Background="Transparent"   
-                BorderBrush="black"
                 />
             <!--
             <DockPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -60,10 +48,10 @@
                 <!--Sección de los estados-->
                 <StackPanel x:Name="stkEstados" Margin="20,0">
                     <StackPanel.Resources>
-                        <!--<svc:ConversorDeEstados x:Key="conversorDeEstados"/>-->
+                        <converter:ConversorDeEstados x:Key="conversorDeEstados"/>
                     </StackPanel.Resources>
                     <Label x:Name="lblEstados" Content="Estados" FontSize="28" Style="{StaticResource FormTitle}"></Label>
-                    <ListBox 
+                    <ListBox                         
                         x:Name="lstEstados" 
                         FontSize="20" 
                         Padding="0,20"
@@ -71,8 +59,12 @@
                         Width="250" 
                         Margin="40" 
                         Style="{StaticResource StyleListBox}"
-                        ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath=estado/@name}">                        
+                        ItemsSource="{Binding Source={StaticResource estado_Mesa}, XPath=estado/@name}"
+                        > 
                     </ListBox>
+
+                    <Label x:Name="lblSeleccionado" Content="Seleccionado:" FontSize="18" Style="{StaticResource FormTitle}"></Label>
+                    <Ellipse Margin="10" Height="50" x:Name="elpSeleccion" Width="50" Fill="{Binding ElementName=lstEstados, Path=SelectedValue, Converter={StaticResource conversorDeEstados}}" />
                 </StackPanel>
 
                 <!--Sección de las Mesas-->
@@ -80,13 +72,6 @@
                 
                 
             </Grid>
-
-            <StackPanel Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
-                <Ellipse Height="20" Name="ellLibre" Stroke="#99ff76" Width="20" />
-                <Label Content="Libre" Margin="0,0,50,0" Foreground="White"/>
-                <Ellipse Height="20" Name="ellOcup" Stroke="Tomato" Width="20" />
-                <Label Content="Ocupada" Foreground="White"/>
-            </StackPanel>
             
         </Grid>
     </Grid>
