--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="600" Width="1000" WindowStartupLocation="CenterScreen">
+        Title="Modulo de Artículos" Style="{StaticResource MainWindowStyle}" MouseLeftButtonDown="moveWindow" Height="600" Width="1000" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Window.Resources>
         <ObjectDataProvider
             x:Key="Data_Articulo"
@@ -76,15 +76,10 @@
                                 </TextBox.Text>
                             </TextBox>
 
-                            <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120">
-                                <ComboBoxItem  Content="Materias Primas" />
-                                <ComboBoxItem Content="Bebidas" />
-                            </ComboBox>
-                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120">
-                                <ComboBoxItem Content="kg" />
-                                <ComboBoxItem Content="L" />
-                                <ComboBoxItem Content="mL" />
-                            </ComboBox>
+                            <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>
+                                
+                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboMedida" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" BorderBrush="#FFE53535" Width="120" />
+                                
 
                             <Label Grid.Row="5" Grid.ColumnSpan="2" VerticalAlignment="Top" Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center" />
                             <TextBox Grid.Row="5" Grid.ColumnSpan="2" DataContext="{StaticResource Data_Articulo}" Style="{StaticResource EstiloError}" Name="txtDescripcion" 
