--- a/Vistas/ABMArticulos.xaml
+++ b/Vistas/ABMArticulos.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="ABMArticulos" Height="400" Width="600" Loaded="Window_Loaded">
+        Title="ABMArticulos" Height="400" Width="600" Loaded="Window_Loaded"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Window.Resources>
      <ObjectDataProvider
             x:Key="LIST_ARTICULO"
@@ -11,59 +11,79 @@
         </ObjectDataProvider>
     </Window.Resources>
 
-    <Grid Name="contentGrid" DataContext="{Binding Source={StaticResource ResourceKey=LIST_ARTICULO}}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="10*"></RowDefinition>
-            <RowDefinition Height="90*"></RowDefinition>
-        </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50*"></ColumnDefinition>
-                <ColumnDefinition Width="50*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            
-            <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
-                <Button Content="Nuevo" Margin="7,0" Height="30" Width="70" Click="btn_Agregar"></Button>
-                <Button Content="Nuevo" Margin="7,0" Height="30" Width="70"></Button>
-                <Button Content="Nuevo" Margin="7,0" Height="30" Width="70"></Button>
-            </StackPanel>
-            <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
-                <Button x:Name="btn_first" Content="|&lt;" Margin="7,0" Height="30" Width="30" Click="btn_first_Click"></Button>
-                <Button x:Name="btn_prev" Content="&lt;" Margin="7,0" Height="30" Width="30" Click="btn_prev_Click"></Button>
-                <Button x:Name="btn_next" Content=">" Margin="7,0" Height="30" Width="30" Click="btn_next_Click"></Button>
-                <Button x:Name="btn_last" Content=">|" Margin="7,0" Height="30" Width="30" Click="btn_last_Click"></Button>
-            </StackPanel>            
-        </Grid>
-        
-        <Grid Grid.Row="1" Margin="30">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition> 
-            </Grid.ColumnDefinitions>            
+    <Grid>
+
+        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="ABM de Artículos" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#232323" Offset="0.6" />
+                    <GradientStop Color="#121212" Offset="0.9" />
+                    <GradientStop Color="#070707" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+
+        <Grid Margin="0,50,0,0" Name="contentGrid" DataContext="{Binding Source={StaticResource ResourceKey=LIST_ARTICULO}}">
+
             <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="10*"></RowDefinition>
+                <RowDefinition Height="90*"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" Content="Código" HorizontalAlignment="Center"></Label>
-            <Label Grid.Column="0" Grid.Row="1" Content="Descripción" HorizontalAlignment="Center"></Label>
-            <Label Grid.Column="0" Grid.Row="2" Content="Familia" HorizontalAlignment="Center"></Label>
-            <Label Grid.Column="0" Grid.Row="3" Content="Categoría" HorizontalAlignment="Center"></Label>
-            <Label Grid.Column="0" Grid.Row="4" Content="Unidad de Medida" HorizontalAlignment="Center"></Label>
-            <Label Grid.Column="0" Grid.Row="5" Content="Costo" HorizontalAlignment="Center"></Label>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="328*"></ColumnDefinition>
+                    <ColumnDefinition Width="250*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock Text="{Binding Art_Id}" Grid.Column="1" Grid.Row="0" Width="auto" Height="30" ></TextBlock>
-            <TextBlock Text="{Binding Art_Descrip}" Grid.Column="1" Grid.Row="1" Width="auto" Height="30"></TextBlock>
-            <TextBlock Text="{Binding Familia.Fam_Descrip}" Grid.Column="1" Grid.Row="2" Width="auto" Height="30"></TextBlock>
-            <TextBlock Text="{Binding Categoria.Cat_Descrip}" Grid.Column="1" Grid.Row="3" Width="auto" Height="30"></TextBlock>
-            <TextBlock Text="{Binding Unidad_Medida.Um_Descrip}" Grid.Column="1" Grid.Row="4" Width="auto" Height="30"></TextBlock>
-            <TextBlock Text="{Binding Art_Precio}" Grid.Column="1" Grid.Row="5" Height="30" Margin="0,7"></TextBlock>
+                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
+                    <Button x:Name="btnNuevoArt" Content="Nuevo" Margin="7,0" Height="30" Width="70" Click="btn_Agregar"></Button>
+                    <Button x:Name="btnModifArt" Content="Modificar" Margin="7,0" Height="30" Width="70"></Button>
+                    <Button x:Name="btnDeleteArt" Content="Eliminar" Margin="7,0" Height="30" Width="70"></Button>
+                </StackPanel>
+                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
+                    <Button x:Name="btn_first" Content="|&lt;" Margin="7,0" Height="30" Width="30" Click="btn_first_Click"></Button>
+                    <Button x:Name="btn_prev" Content="&lt;" Margin="7,0" Height="30" Width="30" Click="btn_prev_Click"></Button>
+                    <Button x:Name="btn_next" Content=">" Margin="7,0" Height="30" Width="30" Click="btn_next_Click"></Button>
+                    <Button x:Name="btn_last" Content=">|" Margin="7,0" Height="30" Width="30" Click="btn_last_Click"></Button>
+                </StackPanel>
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="80,20" Background="#262627">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="Código" HorizontalAlignment="Center"></Label>
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="1" Content="Descripción" HorizontalAlignment="Center"></Label>
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Content="Familia" HorizontalAlignment="Center"></Label>
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="3" Content="Categoría" HorizontalAlignment="Center"></Label>
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="4" Content="Unidad de Medida" HorizontalAlignment="Center"></Label>
+                <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="5" Content="Costo" HorizontalAlignment="Center"></Label>
+
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Art_Id}" Grid.Column="1" Grid.Row="0" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center" ></TextBlock>
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Art_Descrip}" Grid.Column="1" Grid.Row="1" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Familia.Fam_Descrip}" Grid.Column="1" Grid.Row="2" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Categoria.Cat_Descrip}" Grid.Column="1" Grid.Row="3" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Unidad_Medida.Um_Descrip}" Grid.Column="1" Grid.Row="4" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding Art_Precio}" Grid.Column="1" Grid.Row="5" Height="auto" Margin="0,7" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+            </Grid>
+
         </Grid>
-        
+
     </Grid>
 </Window>
