--- a/Vistas/winArticulos.xaml
+++ b/Vistas/winArticulos.xaml
@@ -65,7 +65,7 @@
                             </Grid.RowDefinitions>
 
                             <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Artículo" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
-                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="0,0,0,25" Width="237" />
+                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
 
                             <Label HorizontalAlignment="Right" Grid.Row="1" Content="Familia:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
                             <Label HorizontalAlignment="Right" Grid.Row="2" Content="Unidad de Medida:" Name="label3" Style="{StaticResource StyleLabelForm}" />
@@ -110,14 +110,7 @@
                 
                 <!-- grid botones-->
                 <Grid Margin="5" Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="33*" />
-                        <ColumnDefinition Width="33*" />
-                        <ColumnDefinition Width="33*" />
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="0" Click="btnGuardar_Click" Content="AÑADIR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Right"></Button>
-                    <Button Grid.Column="1" Content="MODIFICAR" Style="{StaticResource ButtonFormBlack}" Width="90"></Button>
-                    <Button Grid.Column="2" Content="ELIMINAR" Style="{StaticResource ButtonFormBlack}" Width="90" HorizontalAlignment="Left"></Button>
+                    <Button Grid.Column="0" Click="btnGuardar_Click" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center"></Button>
                 </Grid>
             </Grid>
             
