--- a/Vistas/winPedidos.xaml
+++ b/Vistas/winPedidos.xaml
@@ -1,8 +1,103 @@
 ﻿<Window x:Class="Vistas.winPedidos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="winPedidos" Height="300" Width="300">
+        Title="winPedidos" Height="650" Width="auto"  Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow">
     <Grid>
-        
+        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+            <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
+                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Label Name="lblWinTitle" Content="Alta de Nuevo Pedido" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
+            </DockPanel>
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#232323" Offset="0.6" />
+                    <GradientStop Color="#121212" Offset="0.9" />
+                    <GradientStop Color="#070707" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+
+        <Grid>
+            <Grid x:Name="lGrid" Margin="0,40,0,10">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="362*" />
+                    <ColumnDefinition Width="588*" />
+                </Grid.ColumnDefinitions>
+
+                <Grid Grid.Column="0">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="360*" />
+                        <RowDefinition Height="69*" />
+                    </Grid.RowDefinitions>
+
+
+                    <Grid Margin="20,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="270*" />
+                        </Grid.RowDefinitions>
+
+                        <Grid Name="grdArticuloForm">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="189*" />
+                                <ColumnDefinition Width="191*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="28*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+                                <RowDefinition Height="12*" />
+
+                            </Grid.RowDefinitions>
+
+                            <Label Name="lblNewArtTitle" Width="auto" Content="Nuevo Pedido" VerticalAlignment="Top" Margin="0,20,0,0" Style="{StaticResource FormTitle}" Grid.ColumnSpan="2" Height="50" />
+                            <Label Name="lblNewArtDescrip" Content="Ingrese los datos del Artículo" VerticalAlignment="Bottom" Style="{StaticResource FormDescription}" Grid.ColumnSpan="2" Margin="53,0,43,7" Width="237" />
+
+                            <Label HorizontalAlignment="Right" Grid.Row="1" Content="Mesa:" Name="label2" Style="{StaticResource StyleLabelForm}" Margin="0,3,11,6" />
+                            <Label HorizontalAlignment="Right" Grid.Row="2" Content="Fecha y Hora:" Name="label3" Style="{StaticResource StyleLabelForm}" />
+                            <Label HorizontalAlignment="Right" Grid.Row="3" Content="Cliente:" Name="lblCategoria" Style="{StaticResource StyleLabelForm}" />
+
+                            <Label HorizontalAlignment="Right" Content="Ítems del Pedido:" Name="label4" Grid.Row="4" Style="{StaticResource StyleLabelForm}" Margin="0,6,10,0" />
+                            <ComboBox HorizontalAlignment="Left" Name="cboFlia" Grid.Column="1" Grid.Row="1" Margin="5,0" Height="23" Width="120"/>
+
+                            <Label Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" Content="dd/mm/yyyy" Name="lblToday" Style="{StaticResource StyleLabelForm}" />
+                            <ComboBox Height="23" HorizontalAlignment="Left" Margin="5,0,0,0" Name="cboCategoria" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1" BorderBrush="#FFE53535" Width="120" />
+                            <Button Name="btnAddItems" Content="Añadir Ítems" Grid.Column="1" Grid.Row="4" Height="23" HorizontalAlignment="Left" Margin="89,26,0,0" VerticalAlignment="Top" Width="75" Click="btnAddItems_Click" />
+                        </Grid>
+
+                        <!--
+                    <StackPanel Grid.RowSpan="2" Name="stackPanel1" Orientation="Vertical" Grid.Row="1">
+                        <Label Content="Descripción del Artículo:" Name="label6" Style="{StaticResource StyleLabelForm}" HorizontalAlignment="Center"/>
+                        <TextBox Style="{StaticResource StyleTextBoxForm}" Name="txtDescripcion" HorizontalAlignment="Center" VerticalContentAlignment="Top" Width="269" MinHeight="60" FontSize="13"  />
+                    </StackPanel>
+                    -->
+
+                    </Grid>
+
+                    <!-- grid botones-->
+                    <Grid Margin="5" Grid.Row="2">
+                        <Button Name="btnagregarart" Grid.Column="0" Content="AÑADIR ARTÍCULO" Style="{StaticResource ButtonFormBlack}" Width="160" HorizontalAlignment="Center"></Button>
+                    </Grid>
+                </Grid>
+
+                <ListView Name="lvwArticulos" Grid.Column="1" Height="200" Background="Black" Foreground="White" FontFamily="Century Gothic" HorizontalContentAlignment="Center" BorderBrush="Black" Margin="0,155,25,156" >
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="30" Header="ID" DisplayMemberBinding="{Binding Path=art_id}"/>
+                            <GridViewColumn Width="200" Header="Descripción" DisplayMemberBinding="{Binding Path=art_descripcion}"/>
+                            <GridViewColumn Width="40" Header="UM" DisplayMemberBinding="{Binding Path=UM_abreviatura}"/>
+                            <GridViewColumn Width="60" Header="Precio" DisplayMemberBinding="{Binding Path=art_precio}"/>
+                            <GridViewColumn Width="60" Header="Stock" DisplayMemberBinding="{Binding Path=art_stock}"/>
+                            <GridViewColumn Width="90" Header="Familia" DisplayMemberBinding="{Binding Path=fam_descripcion}"/>
+                            <GridViewColumn Width="90" Header="Categoria" DisplayMemberBinding="{Binding Path=cat_descripcion}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+
+        </Grid>
     </Grid>
 </Window>
