--- a/Vistas/winMesas.xaml
+++ b/Vistas/winMesas.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="winMesas" Height="500" MouseLeftButtonDown="moveWindow" Width="1280" MinHeight="720" MinWidth="454" Style="{StaticResource MainWindowStyle}" WindowStartupLocation="CenterScreen"
+        WindowState="Maximized"
         xmlns:converter="clr-namespace:Vistas"
         >
         <!--xmlns:svc="clr-namespace:Vistas;assembly=winMesas"-->
