--- a/Vistas/Styles/StylesButtonForm.xaml
+++ b/Vistas/Styles/StylesButtonForm.xaml
@@ -29,6 +29,7 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
+                <Setter Property="Cursor" Value="Hand"/>
                 <Setter Property = "Foreground" Value="#000000"/>
                 <Setter Property="Background" Value="#FFD46F"></Setter>
                 <Setter Property="FontSize" Value="16"></Setter>
