--- a/Vistas/winABMUsuarios.xaml
+++ b/Vistas/winABMUsuarios.xaml
@@ -2,13 +2,24 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:svc="clr-namespace:ClasesBase;assembly=ClasesBase"
-        Title="winABMUsuarios" Height="450" Width="600" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+        xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+        Title="winABMUsuarios" MinHeight="460" MinWidth="600" Height="460" Width="600" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
     <Window.Resources>
         <ObjectDataProvider
         x:Key="LIST_USUARIO"
         ObjectType="{x:Type svc:TrabajarUsuarios}"
         MethodName="TraerUsuariosColeccion">
         </ObjectDataProvider>
+
+        <!--
+        <CollectionViewSource
+            x:Key="VISTA_USUARIO"
+            Source="{StaticResource ResourceKey=LIST_USUARIO}"
+            Filter="eventVistaUsuario_Filter"
+            >
+        </CollectionViewSource>
+    -->
+
     </Window.Resources>
     
     <Grid>
@@ -28,32 +39,61 @@
         </Border>
 
         <Grid Margin="0,50,0,0" Name="contentGrid" DataContext="{Binding Source={StaticResource ResourceKey=LIST_USUARIO}}">
-
+            
             <Grid.RowDefinitions>
-                <RowDefinition Height="10*"></RowDefinition>
+                <RowDefinition Height="15*"></RowDefinition>
                 <RowDefinition Height="90*"></RowDefinition>
+                <RowDefinition Height="20*"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="328*"></ColumnDefinition>
-                    <ColumnDefinition Width="250*"></ColumnDefinition>
+                    <ColumnDefinition Width="50*"></ColumnDefinition>
+                    <ColumnDefinition Width="50*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
-                    <Button x:Name="btnNuevoUsr" Content="Nuevo" Margin="3,0" Height="30" Width="70" Click="btn_NuevoUsuario"></Button>
-                    <Button x:Name="btnModifUsr" Content="Modificar" Margin="3,0" Height="30" Width="70" Click="btn_ModifUsuario"></Button>
-                    <Button x:Name="btnDeleteusr" Content="Eliminar" Margin="3,0" Height="30" Width="70" Click="btn_ElimUsuario"></Button>
-                </StackPanel>
-                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="center">
-                    <Button x:Name="btn_first" Content="|&lt;" Margin="7,0" Height="30" Width="30" Click="btn_first_Click"></Button>
-                    <Button x:Name="btn_prev" Content="&lt;" Margin="7,0" Height="30" Width="30" Click="btn_prev_Click"></Button>
-                    <Button x:Name="btn_next" Content=">" Margin="7,0" Height="30" Width="30" Click="btn_next_Click"></Button>
-                    <Button x:Name="btn_last" Content=">|" Margin="7,0" Height="30" Width="30" Click="btn_last_Click"></Button>
-                </StackPanel>
+                <Label Grid.Column="0" Content="Usuarios" Style="{StaticResource FormTitle}" FontSize="26" HorizontalAlignment="Left" Margin="20,0,0,10"></Label>
+                <!-- elemento búsqueda
+                <DockPanel Grid.Column="1" HorizontalAlignment="Center">
+                    <TextBox x:Name="txtSearchUser" Height="20" Width="120" Style="{StaticResource StyleTextBoxForm}" FontSize="10" TextChanged="txtSearchUser_TextChanged" />
+                    <Label Content="🔍" Style="{StaticResource StyleLabelForm}" FontFamily="Segoe UI Emoji" HorizontalAlignment="Left"/>
+                </DockPanel>
+                -->
+                <Button Grid.Column="1" x:Name="btnAddUsr" HorizontalAlignment="Right" Content="+ Nuevo Usuario" Margin="20,0" Height="30" Width="130" Click="btn_NuevoUsuario" Style="{StaticResource ButtonFormBlack}" ></Button>
             </Grid>
 
-            <Grid Name="grdArticulos" Grid.Row="1" Margin="80,20" Background="#262627">
+            <Grid Name="grdMainUsuarios" Grid.Row="1" Grid.ColumnSpan="2">
+               
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10*"/>
+                    <ColumnDefinition Width="80*"/>
+                    <ColumnDefinition Width="10*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" x:Name="btn_prev" FontSize="28" Content="&lt;" Margin="7,0" Height="5000" Width="300" Click="btn_prev_Click" Style="{StaticResource ButtonFormBlack}" BorderBrush="Transparent"/>
+                <Button Grid.Column="2" x:Name="btn_next" FontSize="28" Content=">" Margin="7,0" Height="5000" Width="300" Click="btn_next_Click" Style="{StaticResource ButtonFormBlack}" BorderBrush="Transparent"/>
+                    
+                
+                <StackPanel x:Name="stpUsuarios" Grid.Column="1" Margin="20">
+                    <TextBlock Margin="0,15,0,0" Text="{Binding Usr_NombreUsuario}" Style="{StaticResource FormTitle}" ></TextBlock>
+                    <DockPanel Margin="50,10" HorizontalAlignment="Center">
+                        <Label Content="Nombre Real:" Style="{StaticResource StyleLabelForm}" FontWeight="Bold"></Label>
+                        <Label Content="{Binding Usr_ApellidoNombre}" Style="{StaticResource StyleLabelForm}"></Label>
+                    </DockPanel>
+
+                    <DockPanel Margin="50,0" HorizontalAlignment="Center">
+                        <Label Content="Rol:" Style="{StaticResource StyleLabelForm}" FontWeight="Bold"></Label>
+                        <Label Content="{Binding Rol.Rol_Descrip}" Style="{StaticResource StyleLabelForm}"></Label>
+                    </DockPanel>
+
+                    <DockPanel Margin="50,10" HorizontalAlignment="Center">
+                        <Label Content="ID:" Style="{StaticResource StyleLabelForm}" FontWeight="Bold"></Label>
+                        <Label x:Name="txtUsrID" Content="{Binding Usr_Id}" Style="{StaticResource StyleLabelForm}"></Label>
+                    </DockPanel>
+
+                </StackPanel>
+                
+                <!--
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -66,7 +106,7 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-
+                
                 <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Content="Nombre y Apellido" HorizontalAlignment="Center"></Label>
                 <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="1" Content="Usuario" HorizontalAlignment="Center"></Label>
                 <Label Style="{StaticResource StyleLabelForm}" FontWeight="Bold" Grid.Column="0" Grid.Row="2" Content="Rol" HorizontalAlignment="Center"></Label>
@@ -80,10 +120,16 @@
                 <TextBlock x:Name="txtUsrID" Style="{StaticResource StyleLabelForm}" Text="{Binding Usr_Id}" Grid.Column="1" Grid.Row="3" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
                 <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding }" Grid.Column="1" Grid.Row="4" Width="auto" Height="auto" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
                 <TextBlock Style="{StaticResource StyleLabelForm}" Text="{Binding }" Grid.Column="1" Grid.Row="5" Height="auto" Margin="0,7" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
-
+                -->
 
 
             </Grid>
+
+            <DockPanel Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1">
+                <Button x:Name="btnModifUsr" Content="Actualizar Usuario" Margin="7" Height="40" Width="150" Click="btn_ModifUsuario" Style="{StaticResource ButtonFormBlack}"></Button>
+                <Button x:Name="btnDeleteusr" Content="Eliminar Usuario" Margin="7" Height="40" Width="150" Click="btn_ElimUsuario" Style="{StaticResource ButtonFormBlack}" Background="#880000" Foreground="#EEEEEE"></Button>
+            </DockPanel>
+            
         </Grid>
 
     </Grid>
